--- a/bin/bindings.properties
+++ b/bin/bindings.properties
@@ -56,6 +56,7 @@ orientdb:com.yahoo.ycsb.db.OrientDBClient
 rados:com.yahoo.ycsb.db.RadosClient
 redis:com.yahoo.ycsb.db.RedisClient
 riak:com.yahoo.ycsb.db.riak.RiakKVClient
+rocksdb:com.yahoo.ycsb.db.RocksDBClient
 s3:com.yahoo.ycsb.db.S3Client
 solr:com.yahoo.ycsb.db.SolrClient
 tarantool:com.yahoo.ycsb.db.TarantoolClient
